# fcitx

./: .gitignore  .hgignore  .mailmap  AUTHORS  CMakeLists.txt  COPYING  COPYING.LIBS  ChangeLog  Dockerfile  Doxyfile.in  INSTALL  Makefile.am  Makefile.in  README  THANKS  TODO  aclocal.m4  autogen.sh  clang-format.sh  config.h.in  configure  configure.in  fcitx.spec  fcitx.spec.in
cmake/: CMakeLists.txt  Doxyfile.in  FcitxConfig.cmake  FcitxConfigVersion.cmake.in  FcitxMacro.cmake  FindEnchant.cmake  FindFcitx4.cmake  FindGettextPo.cmake  FindICU.cmake  FindIsoCodes.cmake  FindLibexecinfo.cmake  FindLibiconv.cmake  FindLibkvm.cmake  FindLua.cmake  FindOpenCC.cmake  FindPresage.cmake  FindPthread.cmake  FindWaylandClient.cmake  FindXKBCommon.cmake  FindXkbFile.cmake  GObjectIntrospection.cmake  UseDoxygen.cmake  cmake_uninstall.cmake.in  fcitx-cmake-helper.sh  fcitx-extract-confdesc.sh  fcitx-extract-cpp.sh  fcitx-extract-desktop.sh  fcitx-extract-gettext.sh  fcitx-extract-kde.sh  fcitx-extract-po.sh  fcitx-extract-qt.sh  fcitx-filter-po.sh  fcitx-merge-config.sh  fcitx-parse-po.sh  fcitx-scan-pot.sh  fcitx-write-po.sh
data/: CMakeLists.txt  Makefile.am  Makefile.in  addon.desc  config  config.desc  daemon.conf  download.sh  env_setup.sh  fcitx-autostart.desktop.in  fcitx-config  fcitx-configtool.desktop.in  fcitx-kimpanel.desktop.in  fcitx.desktop.in  gbkpy.org  gbks2t.tab  getdescpo  inputmethod.desc  profile.desc  punc.mb  punc.mb.zh_CN  punc.mb.zh_HK  punc.mb.zh_TW  py.mb  pySym.mb  pybase.mb  skin.desc  tables.conf  vk.conf  wbx-s.txt
data/icon/: CMakeLists.txt
data/icon/data/: gen.sh
data/png/: CMakeLists.txt
data/script/: CMakeLists.txt  fcitx-autostart  fcitx-configtool  fcitx-configtool.sh  fcitx-diagnose.sh  fcitx4-config.in
data/table/: CMakeLists.txt  Makefile.am  cangjie.conf  cangjie.conf.in  db.conf  db.conf.in  disable-table.conf.template  erbi.conf  erbi.conf.in  qxm.conf  qxm.conf.in  wanfeng.conf  wanfeng.conf.in  wbpy.conf  wbpy.conf.in  wbx.conf  wbx.conf.in  wbx.txt  zrm.conf  zrm.conf.in
lib/: API.txt  FrameMgr.c  IMConn.c  IMMethod.c  IMValues.c  IMdkit.h  Makefile.am  Makefile.in  Xi18n.h  Xi18nTr.h  Xi18nX.h  XimProto.h  i18nAttr.c  i18nIc.c  i18nMethod.c  i18nPtHdr.c
png/: Makefile.am
po/: CMakeLists.txt  ChangeLog  Makevars  POTFILES.in  POTFILES.in.in  ca.po  da.po  de.po  es.po  fcitx.pot  fr.po  getdescpo  ja.po  ko.po  ru.po  zh_CN.po  zh_TW.po
skin/: CMakeLists.txt  Makefile.am
skin/classic/: CMakeLists.txt  Makefile.am  fcitx_skin.conf  fcitx_skin.conf.in
skin/dark/: CMakeLists.txt  Makefile.am  fcitx_skin.conf  fcitx_skin.conf.in
skin/default/: CMakeLists.txt  Makefile.am  fcitx_skin.conf  fcitx_skin.conf.in
src/: AutoEng.c  AutoEng.h  CMakeLists.txt  DBus.c  DBus.h  IC.c  IC.h  ImeRemote.c  InputWindow.c  InputWindow.h  KeyList.c  KeyList.h  MainWindow.c  MainWindow.h  Makefile.am  Makefile.in  Makefile.old  MyErrorsHandlers.c  MyErrorsHandlers.h  PYFA.c  PYFA.h  QuickPhrase.c  QuickPhrase.h  SetLocale.c  SetLocale.h  TrayWindow.c  TrayWindow.h  about.c  about.h  erbi.c  erbi.h  extra.c  extra.h  fcitx.h  ime.c  ime.h  internalVersion.c  main.c  main.c.test  main.h  (+28 more)
src/backend/: CMakeLists.txt
src/backend/fbterm/: CMakeLists.txt  imapi.c  immessage.h
src/backend/gtk/: CMakeLists.txt
src/backend/gtk-common/: marshall.list
src/backend/gtk2/: CMakeLists.txt  client.c  client.h  fcitxim.c  fcitximcontext.c  fcitximcontext.h  marshal.list
src/backend/gtk3/: CMakeLists.txt
src/config/: CMakeLists.txt  fcitx4-config.in
src/core/: CMakeLists.txt  IC.c  IC.h  Makefile.am  MyErrorsHandlers.c  MyErrorsHandlers.h  addon.c  addon.h  backend.c  backend.h  errorhandler.c  errorhandler.h  fcitx.c  fcitx.h  fcitx.pc.in  hook-internal.h  hook.c  hook.h  im.h  ime-internal.h  ime.c  ime.h  internalVersion.c  keys.c  keys.h  main.c  module.c  module.h  ui.c  ui.h  xim.c  xim.h
src/fcitx-config/: CMakeLists.txt  Makefile.am  configfile.h  cutils.c  cutils.h  fcitx-config.c  fcitx-config.h  fcitx-config.pc.in  hotkey.c  hotkey.h  profile.h  sprintf.c  sprintf.h  xdg.c  xdg.h
src/frontend/: CMakeLists.txt
src/im/: CMakeLists.txt  Makefile.am
src/interface/: DBus.c  DBus.h  ImeRemote.c  Makefile.am
src/lib/: CMakeLists.txt
src/module/: CMakeLists.txt
src/tools/: Makefile.am  configfile.c  configfile.h  profile.c  profile.h  tools.c  tools.h  utarray.h  utf8.c  utf8.h
src/ui/: AboutWindow.c  AboutWindow.h  CMakeLists.txt  InputWindow.c  InputWindow.h  MainWindow.c  MainWindow.h  Makefile.am  MenuWindow.c  MenuWindow.h  MessageWindow.c  MessageWindow.h  TrayWindow.c  TrayWindow.h  font.c  font.h  skin.c  skin.h  skinconfig.c  tray.c  tray.h  ui.c  ui.h
src/utils/: CMakeLists.txt  configfile.c  configfile.h  profile.c  profile.h  utarray.h  utf8.c  utils.c  utils.h
test/: CMakeLists.txt  Makefile.am  input_testcase.txt  test.conf  test.desc  testarray.c  testbacktrace.c  testcast.c  testconfig.c  testdbuslaunch.c  testdbussocket.c  testhandlertable.c  testhotkey.c  testmessage.c  testobjpool.c  testpinyin.c  testpyfa.c  testsort.c  teststring.c  testunicode.c  testutf8.c  testxdg.c
tools/: CMakeLists.txt  Makefile.am  Makefile.in  client-test.c  createPYMB.c  fcitx-remote.c  jd2fcitx.c  jtcj.txt  mb2org.c  mb2txt.c  pyPhrase.ok  pyTools.c  pyTools.h  pyjj2fcitx.c  readPYBase.c  readPYMB.c  scel2org.c  txt2mb.c  win2fcitx.c  winmb2fcitx.py
tools/cli/: CMakeLists.txt  createPYMB.c  fcitx-diagnose.sh  fcitx-path-maker.c  fcitx-remote.c  mb2org.c  mb2txt.c  pyTools.c  readPYBase.c  readPYMB.c  scel2org.c  txt2mb.c
tools/dev/: CMakeLists.txt  fcitx-po-parser.c  fcitx-scanner.c
tools/gui/: CMakeLists.txt  common.h
xpm/: Makefile.am  Makefile.in  about_icon.xpm  active.xpm  chnPunc.xpm  eb-0.xpm  eb-1.xpm  eb-2.xpm  eng.xpm  engPunc.xpm  ft-0.xpm  ft-1.xpm  fullcorner.xpm  gbk-0.xpm  gbk-1.xpm  halfcorner.xpm  inactive.xpm  lock-0.xpm  lock-1.xpm  logo.xpm  lx-0.xpm  lx-1.xpm  next.xpm  prev.xpm  py-0.xpm  py-1.xpm  py-2.xpm  sp-0.xpm  sp-1.xpm  vk-1.xpm  vk.xpm  wb-0.xpm  wb-1.xpm  wb-2.xpm
(+693 files in other folders)
