AUTOMAKE_OPTIONS = foreign
SUBDIRS = doc skin lib src tools data png po debian
EXTRA_DIST = autogen.sh fcitx.spec

MAINTAINERCLEANFILES = \
        aclocal.m4 \
        config.guess \
        config.sub \
        configure \
        INSTALL \
        missing \
        mkinstalldirs \
        Makefile.in
